--- a/benchmark/image_compress_sample/pubspec.yaml
+++ b/benchmark/image_compress_sample/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   path_provider: ^2.0.0
   flutter_image_compress: ^2.3.0
+  sagar:
+    path: ../../
 
 
 dev_dependencies:
